--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .page-row {
   max-width: 1234px;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
   width: 100%;
-  padding: 0 2.5%;
+  /*padding: 0 2.5%;*/
 }
 .header-content {
   color: rgba(0, 0, 0, .75);
